@@ -36,32 +36,6 @@ namespace MailTransport {
   class Transport;
 }
 
-struct ldapStruct
-{
-  ldapStruct()
-    : maxHint(-1),
-      port(-1),
-      limit(-1),
-      timeout(-1),
-      useSSL(false),
-      useTLS(false)
-  {
-  }
-
-  KUrl ldapUrl;
-  QString dn;
-  QString saslMech;
-  QString fileName;
-  QString description;
-  int maxHint;
-  int port;
-  int limit;
-  int timeout;
-  bool useSSL;
-  bool useTLS;
-
-};
-
 class AbstractSettings : public AbstractBase
 {
 public:
@@ -97,8 +71,6 @@ protected:
   void addCheckMailOnStartup(const QString& agentIdentifyName,bool loginAtStartup);
   void addToManualCheck(const QString& agentIdentifyName,bool manualCheck);
   int readKmailSettings( const QString&groupName, const QString& key);
-
-  void mergeLdap(const ldapStruct &ldap);
 
   ImportWizard *mImportWizard;
   KPIMIdentities::IdentityManager *mManager;
