@@ -16,14 +16,18 @@
 */
 
 #include "balsaaddressbook.h"
+#include "importwizardutil.h"
 
 #include <KABC/Addressee>
 #include <kabc/contactgroup.h>
+#include <KABC/LDIFConverter>
 
 #include <KConfig>
 #include <KConfigGroup>
 
 #include <QDebug>
+#include <QFile>
+#include <QFileInfo>
 
 BalsaAddressBook::BalsaAddressBook(const QString &filename, ImportWizard *parent)
   : AbstractAddressBook( parent )
@@ -44,7 +48,6 @@ BalsaAddressBook::~BalsaAddressBook()
 
 void BalsaAddressBook::readAddressBook(const KConfigGroup& grp)
 {
-//TODO
   const QString type = grp.readEntry(QLatin1String("Type"));
   if(type.isEmpty()) {
     return;
@@ -52,22 +55,47 @@ void BalsaAddressBook::readAddressBook(const KConfigGroup& grp)
   const QString name = grp.readEntry(QLatin1String("Name"));
 
   if(type == QLatin1String("LibBalsaAddressBookLdap")) {
+    //TODO
+    ldapStruct ldap;
+    ldap.dn = grp.readEntry(QLatin1String("BaseDN"));
+    ldap.useTLS = (grp.readEntry(QLatin1String("EnableTLS")) == QLatin1String("true"));
+    ldap.ldapUrl = grp.readEntry(QLatin1String("Host"));
 
       /*
       Host=ldap://ldap
       BaseDN=ss
       BookDN=ss
       EnableTLS=true
-      Type=LibBalsaAddressBookLdap
       Name=tito
-      ExpandAliases=true
-      IsExpensive=true
-      DistListMode=false
 */
+    ImportWizardUtil::mergeLdap(ldap);
   } else if(type == QLatin1String("LibBalsaAddressBookGpe")) {
-
+      qDebug()<<" Import it !";
   } else if(type == QLatin1String("LibBalsaAddressBookLdif")) {
+    const QString path = grp.readEntry(QLatin1String("Path"));
+    if(!path.isEmpty()) {
+      KABC::Addressee::List contacts;
+      QFile file( path );
+      QTextStream stream( &file );
+      stream.setCodec( "ISO 8859-1" );
 
+      const QString wholeFile = stream.readAll();
+      const QDateTime dtDefault = QFileInfo( file ).lastModified();
+      file.close();
+
+      KABC::LDIFConverter::LDIFToAddressee( wholeFile, contacts, dtDefault );
+      Q_FOREACH(const KABC::Addressee&contact, contacts) {
+        createContact( contact );
+      }
+    }
+  } else if(type == QLatin1String("LibBalsaAddressBookVcard")) {
+    const QString path = grp.readEntry(QLatin1String("Path"));
+    if(!path.isEmpty()) {
+      QMap<QString, QVariant> settings;
+      settings.insert(QLatin1String("Path"),path);
+      settings.insert(QLatin1String("DisplayName"),name);
+      createResource(QLatin1String("akonadi_vcard_resource") ,name, settings);
+    }
   } else {
       qDebug()<<" unknown addressbook type :"<<type;
   }
