@@ -1,0 +1,52 @@
+/*
+  Copyright (c) 2012 Montel Laurent <montel@kde.org>
+  
+  This program is free software; you can redistribute it and/or modify it
+  under the terms of the GNU General Public License, version 2, as
+  published by the Free Software Foundation.
+  
+  This program is distributed in the hope that it will be useful, but
+  WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  General Public License for more details.
+  
+  You should have received a copy of the GNU General Public License along
+  with this program; if not, write to the Free Software Foundation, Inc.,
+  51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+*/
+
+#ifndef IMPORTWIZARDUTIL_H
+#define IMPORTWIZARDUTIL_H
+#include <KUrl>
+
+struct ldapStruct
+{
+  ldapStruct()
+    : maxHint(-1),
+      port(-1),
+      limit(-1),
+      timeout(-1),
+      useSSL(false),
+      useTLS(false)
+  {
+  }
+
+  KUrl ldapUrl;
+  QString dn;
+  QString saslMech;
+  QString fileName;
+  QString description;
+  int maxHint;
+  int port;
+  int limit;
+  int timeout;
+  bool useSSL;
+  bool useTLS;
+
+};
+
+namespace ImportWizardUtil {
+  void mergeLdap(const ldapStruct &ldap);
+}
+
+#endif // IMPORTWIZARDUTIL_H
