@@ -1,3 +1,4 @@
 After 4.9:
 -----------
 Import opera settings/addressbook
+Import Balsa settings/addressbook/filters
